apps/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-valkey
spec:
  selector:
    app: paperless-ngx-valkey
  ports:
    - port: 6379
      targetPort: 6379
      name: valkey
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-server
spec:
  selector:
    app: paperless-ngx-server
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
